feat: add user registration & activation
